SCKAN-32 feat: added sentence_id as query param to connectivity statement
